// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Person details renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--eu"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm bcl-header__top-navbar bcl-navbar navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="desktop european union logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile european union logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <button
          aria-controls="topNavbarDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#topNavbarDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="topNavbarDropdown"
        >
          <ul
            class="bcl-nav nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                data-bs-target="#languageModal"
                data-bs-toggle="modal"
                href="/example.html"
              >
                &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="me-2-5 bi icon--xs"
                >
                  <use
                    xlink:href="/icons.svg#chat-left-dots-fill"
                  />
                </svg>
                English
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                data-bs-target="#loginModal"
                data-bs-toggle="modal"
                href="/example.html"
              >
                &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="me-2-5 bi icon--xs"
                >
                  <use
                    xlink:href="/icons.svg#person-fill"
                  />
                </svg>
                Log in
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <!-- project name -->
    <!-- navbar -->
    <nav
      aria-label="Main Navigation"
      class="bcl-header__navbar bcl-navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto bcl-navbar navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active bcl-link"
                href="/example.html"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                href="/example.html"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                href="/example.html"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle bcl-link"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Very long label with custom text and custom link as an example
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0 bcl-form"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start bcl-form-control form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end bcl-btn btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  


              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3 bcl-breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              class="bcl-link"
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              class="bcl-link"
              href="/example.html"
            >
              European Union
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              class="bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Union
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="bcl-modal modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--eu bcl-modal modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="container"
          >
            <div
              class="border-bottom mx-n3 px-3 px-md-0 pt-md-4-5"
            >
              <div
                class="py-3-5 px-3 px-sm-0 px-md-3"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class="d-flex align-items-center"
                  >
                    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  


                    <svg
                      class="bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#globe2"
                      />
                    </svg>
                    <h5
                      class="mb-0 ms-2"
                    >
                      Select your language
                    </h5>
                  </div>
                  <button
                    aria-label="Close"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--eu"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    EU official languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#bg"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#es"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#cs"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#da"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#de"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#et"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#el"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between bcl-link"
                        href="/example.html#en"
                        hreflang="en"
                        lang="en"
                      >
                        English&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#fr"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ga"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#hr"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#it"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#lv"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#lt"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#hu"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#mt"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#nl"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#pl"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#pt"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ro"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#sk"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#sl"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#fi"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#sv"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    Other languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#zh"
                        hreflang="zh"
                        lang="zh"
                      >
                        中文
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#tr"
                        hreflang="tr"
                        lang="tr"
                      >
                        Türk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ru"
                        hreflang="ru"
                        lang="ru"
                      >
                        pусский
                      </a>
                    </div>
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ca"
                        hreflang="ca"
                        lang="ca"
                      >
                        Català
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="#"
                        hreflang="ar"
                        lang="ar"
                      >
                        عَرَبِيّ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <main>
    <section
      class="bcl-section"
    >
      &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
            





      <div
        class="bcl-content-banner pt-4 pt-md-4-75 bg-white"
      >
        <div
          class="container"
        >
          <article
            class="bg-transparent border-0 card"
          >
            <div
              class="row"
            >
              <div
                class="bcl-card-start-col bcl-size-large"
              >
                <img
                  alt="alt img"
                  class="card-img-top rounded-1"
                  src="https://picsum.photos/200/200?random=6"
                />
              </div>
              <div
                class="col-md-7 col-lg-8 col-xl-9 col-xxl-8"
              >
                <div
                  class="card-body pt-4 pt-md-0 px-0 px-md-1-5 pb-0"
                >
                  <h1
                    class="fs-1 card-title bcl-preserve bcl-heading"
                  >
                    Stefan Mayer
                  </h1>
                  <div
                    class="mb-3"
                  >
                    <span
                      class="text-muted me-3"
                    >
                      DG TEST
                    </span>
                    <span
                      class="text-muted me-3"
                    >
                      Director
                    </span>
                    <span
                      class="text-muted"
                    >
                      Germany
                    </span>
                  </div>
                  <p
                    class="mb-3"
                  >
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                    <br />
                      Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                    <br />
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                    <br />
                    <br />
                      Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                    <br />
                  </p>
                  <div
                    class="mt-2-5 mb-2"
                  >
                    <div
                      class="mb-3 mb-md-0 d-block d-md-inline-block me-md-4-5"
                    >
                      <a
                        class="d-block d-md-inline-block mb-3 mb-md-0 bcl-link standalone"
                        href="/example.html"
                      >
                        &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                        <svg
                          class="me-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#linkedin"
                          />
                        </svg>
                        Linkedin
                      </a>
                    </div>
                    <div
                      class="mb-3 mb-md-0 d-block d-md-inline-block me-md-4-5"
                    >
                      <a
                        class="d-block d-md-inline-block mb-3 mb-md-0 bcl-link standalone"
                        href="/example.html"
                      >
                        &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                        <svg
                          class="me-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#twitter"
                          />
                        </svg>
                        Twitter
                      </a>
                    </div>
                    <div
                      class="mb-3 mb-md-0 d-block d-md-inline-block me-md-4-5"
                    >
                      <a
                        class="d-block d-md-inline-block mb-3 mb-md-0 bcl-link standalone"
                        href="/example.html"
                      >
                        &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                        <svg
                          class="me-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#facebook"
                          />
                        </svg>
                        Facebook
                      </a>
                    </div>
                    <div
                      class="mb-3 mb-md-0 d-block d-md-inline-block me-md-4-5"
                    >
                      <a
                        class="d-block d-md-inline-block mb-3 mb-md-0 bcl-link standalone"
                        href="/example.html"
                      >
                        &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                        <svg
                          class="me-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#youtube"
                          />
                        </svg>
                        Youtube
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-10 col-xl-9 col-xxl-8"
        >
          <section
            class="bcl-section"
          >
            <h2
              class="bcl-heading"
            >
              Additional information
            </h2>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
            <ul>
              <li>
                Etiam sagittis dictum turpis, eu lacinia tellus pharetra ac
              </li>
              <li>
                Sed auctor purus at tellus cursus dignissim. Sed sit amet ligula nisl
              </li>
            </ul>
          </section>
          <section
            class="bcl-section"
          >
            <h2
              class="bcl-heading"
            >
              Related documents
            </h2>
            <div
              class="mb-4-5 bcl-file border rounded"
            >
              <div
                class="px-3-5 py-3"
              >
                <div
                  class="d-md-flex"
                >
                  <div
                    class="pe-2 pb-2"
                  >
                    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                    <svg
                      class="mt-1 icon--file bi icon--xl"
                    >
                      <use
                        xlink:href="/icons.svg#file-pdf-fill"
                      />
                    </svg>
                  </div>
                  <div
                    class="d-md-flex flex-grow-1"
                  >
                    <div
                      class="flex-grow-1"
                    >
                      <p
                        class="fw-medium m-0 fs-5"
                      >
                        File title
                      </p>
                      <small
                        class="fw-medium m-0"
                      >
                        English
                        <span
                          class="fw-normal"
                        >
                           (16.2 MB - PDF)
                        </span>
                      </small>
                    </div>
                    <a
                      class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
                      download="true"
                      href="#"
                      target="_blank"
                    >
                      Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                      <svg
                        class="ms-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#download"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <h3
              class="bcl-heading"
            >
              Drupal articles
            </h3>
            <div
              class="mb-3 bcl-file border rounded"
            >
              <div
                class="px-3-5 py-3"
              >
                <div
                  class="d-md-flex"
                >
                  <div
                    class="pe-2 pb-2"
                  >
                    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                    <svg
                      class="mt-1 icon--file bi icon--xl"
                    >
                      <use
                        xlink:href="/icons.svg#file-pdf-fill"
                      />
                    </svg>
                  </div>
                  <div
                    class="d-md-flex flex-grow-1"
                  >
                    <div
                      class="flex-grow-1"
                    >
                      <p
                        class="fw-medium m-0 fs-5"
                      >
                        Drupal article 1
                      </p>
                      <small
                        class="fw-medium m-0"
                      >
                        English
                        <span
                          class="fw-normal"
                        >
                           (16.2 MB - PDF)
                        </span>
                      </small>
                    </div>
                    <a
                      class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
                      download="true"
                      href="#"
                      target="_blank"
                    >
                      Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                      <svg
                        class="ms-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#download"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bcl-file border rounded"
            >
              <div
                class="px-3-5 py-3"
              >
                <div
                  class="d-md-flex"
                >
                  <div
                    class="pe-2 pb-2"
                  >
                    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                    <svg
                      class="mt-1 icon--file bi icon--xl"
                    >
                      <use
                        xlink:href="/icons.svg#file-text-fill"
                      />
                    </svg>
                  </div>
                  <div
                    class="d-md-flex flex-grow-1"
                  >
                    <div
                      class="flex-grow-1"
                    >
                      <p
                        class="fw-medium m-0 fs-5"
                      >
                        Drupal article 2
                      </p>
                      <small
                        class="fw-medium m-0"
                      >
                        English
                        <span
                          class="fw-normal"
                        >
                           (16.2 MB - DOC)
                        </span>
                      </small>
                    </div>
                    <a
                      class="standalone align-self-center d-inline-block mt-1 mt-md-0 flex-shrink-0 bcl-link"
                      download="true"
                      href="#"
                      target="_blank"
                    >
                      Download&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                      <svg
                        class="ms-2-5 bi icon--fluid"
                      >
                        <use
                          xlink:href="/icons.svg#download"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="mt-md-4-75 mt-4 bcl-footer bcl-footer--neutral"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa.
          </p>
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <p>
            Contact information of the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#facebook"
                />
              </svg>
              Facebook
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#twitter"
                />
              </svg>
              Twitter
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#linkedin"
                />
              </svg>
              Linkedin
            </a>
          </div>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            About us
          </p>
          <p>
            Information about the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold pb-2 mb-2"
          >
            More information on:
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`OE - Person listing renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--eu"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm bcl-header__top-navbar bcl-navbar navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/example.html"
        >
          <img
            alt="desktop european union logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile european union logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <button
          aria-controls="topNavbarDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#topNavbarDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="topNavbarDropdown"
        >
          <ul
            class="bcl-nav nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                data-bs-target="#languageModal"
                data-bs-toggle="modal"
                href="/example.html"
              >
                &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="me-2-5 bi icon--xs"
                >
                  <use
                    xlink:href="/icons.svg#chat-left-dots-fill"
                  />
                </svg>
                English
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                data-bs-target="#loginModal"
                data-bs-toggle="modal"
                href="/example.html"
              >
                &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                <svg
                  class="me-2-5 bi icon--xs"
                >
                  <use
                    xlink:href="/icons.svg#person-fill"
                  />
                </svg>
                Log in
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <!-- project name -->
    <!-- navbar -->
    <nav
      aria-label="Main Navigation"
      class="bcl-header__navbar bcl-navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto bcl-navbar navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active bcl-link"
                href="/example.html"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                href="/example.html"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link bcl-link"
                href="/example.html"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle bcl-link"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item bcl-link"
                    href="/example.html"
                  >
                    Very long label with custom text and custom link as an example
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0 bcl-form"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start bcl-form-control form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end bcl-btn btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  


              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3 bcl-breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              class="bcl-link"
              href="/example.html"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              class="bcl-link"
              href="/example.html"
            >
              European Union
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              class="bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Union
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-label="loginModalLabel"
    class="bcl-modal modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
            <br />
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--eu bcl-modal modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="container"
          >
            <div
              class="border-bottom mx-n3 px-3 px-md-0 pt-md-4-5"
            >
              <div
                class="py-3-5 px-3 px-sm-0 px-md-3"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class="d-flex align-items-center"
                  >
                    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  


                    <svg
                      class="bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#globe2"
                      />
                    </svg>
                    <h5
                      class="mb-0 ms-2"
                    >
                      Select your language
                    </h5>
                  </div>
                  <button
                    aria-label="Close"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--eu"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    EU official languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#bg"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#es"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#cs"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#da"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#de"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#et"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#el"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between bcl-link"
                        href="/example.html#en"
                        hreflang="en"
                        lang="en"
                      >
                        English&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#fr"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ga"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#hr"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#it"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#lv"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#lt"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#hu"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#mt"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#nl"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#pl"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#pt"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ro"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#sk"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#sl"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#fi"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#sv"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    Other languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#zh"
                        hreflang="zh"
                        lang="zh"
                      >
                        中文
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#tr"
                        hreflang="tr"
                        lang="tr"
                      >
                        Türk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ru"
                        hreflang="ru"
                        lang="ru"
                      >
                        pусский
                      </a>
                    </div>
                    <div
                      class="col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="/example.html#ca"
                        hreflang="ca"
                        lang="ca"
                      >
                        Català
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start bcl-link"
                        href="#"
                        hreflang="ar"
                        lang="ar"
                      >
                        عَرَبِيّ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <main>
    <section
      class="bcl-section"
    >
      <div
        class="bcl-content-banner pt-4 pt-md-4-75 bg-white"
      >
        <div
          class="container"
        >
          <article
            class="bg-transparent border-0 card"
          >
            <div
              class="row"
            >
              <div
                class="bcl-card-start-col"
              >
                <img
                  alt="alt img"
                  class="card-img-top rounded-1"
                  src="https://picsum.photos/255/255"
                />
              </div>
              <div
                class="col-md col-lg-9 col-xxl-8"
              >
                <div
                  class="card-body pt-4 pt-md-0 px-0 px-md-1-5 pb-0"
                >
                  <h1
                    class="fs-1 card-title bcl-preserve bcl-heading"
                  >
                    Persons
                  </h1>
                  <p>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                    <br />
                      Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                    <br />
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa.
                  </p>
                </div>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="bcl-sidebar col-lg-3"
        >
          <section
            class="bcl-section"
          >
            <div
              class="offcanvas-start bcl-offcanvas offcanvas-lg"
              data-bs-scroll="true"
              id="bcl-offcanvas"
              tabindex="-1"
            >
              <div
                class="offcanvas-header p-lg-0 d-lg-block"
              >
                <h2
                  class="mb-lg-4 offcanvas-title bcl-heading"
                >
                  Filter options
                </h2>
                <button
                  aria-label="Close button"
                  class="btn-close text-reset d-lg-none bcl-btn"
                  data-bs-dismiss="offcanvas"
                  type="button"
                />
              </div>
              <div
                class="offcanvas-body p-lg-0"
              >
                <form
                  class="w-100 bcl-form"
                  novalidate="true"
                  onsubmit="return false;"
                >
                  <div
                    class="mb-3"
                  >
                    <label
                      class="form-label"
                    >
                      Name
                    </label>
                    <input
                      class="bcl-form-control form-control"
                      placeholder="Placeholder"
                      type="text"
                    />
                  </div>
                  <div
                    class="mt-4"
                  >
                    <button
                      class="me-2 bcl-btn btn btn-primary btn-md"
                      type="submit"
                    >
                      Refine
                    </button>
                    <button
                      class="bcl-btn btn btn-light btn-md"
                      type="submit"
                    >
                      Clear
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </section>
        </div>
        <div
          class="col-lg-9 col-xxl-8"
        >
          <section
            class="bcl-section"
          >
            <button
              aria-controls="bcl-offcanvas"
              class="d-lg-none w-100 mb-4 bcl-btn btn btn-light btn-lg"
              data-bs-target="#bcl-offcanvas"
              data-bs-toggle="offcanvas"
              type="button"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="me-2 me-2-5 bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#filter"
                />
              </svg>
              Filter options
            </button>
            <div
              class="row"
            >
              <div
                class="col-md-6 col-lg-8 align-self-center"
              >
                <h2
                  class="mb-0 text-capitalize bcl-heading"
                >
                  Results (6)
                </h2>
              </div>
              <div
                class="col-md-6 col-lg-4 mt-3 mt-md-0"
              >
                <div
                  class="float-md-end d-md-flex align-items-center mb-4 mb-md-0"
                >
                  <label
                    class="form-label mb-0"
                  >
                    Sort by
                  </label>
                  <select
                    aria-label="sort-select"
                    class="ms-md-2 bcl-form-select form-select"
                  >
                    <option
                      value="1"
                    >
                      a select option
                    </option>
                    <option
                      value="2"
                    >
                      another select option
                    </option>
                    <option
                      value="3"
                    >
                      another option
                    </option>
                    <option
                      value="4"
                    >
                      last option
                    </option>
                    <option
                      selected=""
                      value=""
                    >
                      A-Z
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <hr
              class="d-none d-md-block"
            />
          </section>
          <section
            class="bcl-section"
          >
            <div
              class="bcl-listing bcl-listing--default-1-col"
            >
              <div
                class="row row-cols-1 g-4"
              >
                <div
                  class="col"
                >
                  <article
                    class="listing-item border-bottom border-md-0 border-0 card"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="bcl-card-start-col mb-3 mb-lg-0 bcl-size-small"
                      >
                        <img
                          alt="alt img"
                          class="card-img-top rounded-1"
                          src="https://picsum.photos/160?random=1"
                        />
                      </div>
                      <div
                        class="col-md"
                      >
                        <div
                          class="card-body p-0 pb-md-0 pb-3"
                        >
                          <h1
                            class="fs-5 card-title bcl-preserve bcl-heading"
                          >
                            <a
                              class="standalone"
                              href="/example.html"
                            >
                              Stefan Mayer
                            </a>
                          </h1>
                          <span
                            class="text-muted me-4-5"
                          >
                            Organisation
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Position
                          </span>
                        </div>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  class="col"
                >
                  <article
                    class="listing-item border-bottom border-md-0 border-0 card"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="bcl-card-start-col mb-3 mb-lg-0 bcl-size-small"
                      >
                        <img
                          alt="alt img"
                          class="card-img-top rounded-1"
                          src="https://picsum.photos/160?random=2"
                        />
                      </div>
                      <div
                        class="col-md"
                      >
                        <div
                          class="card-body p-0 pb-md-0 pb-3"
                        >
                          <h1
                            class="fs-5 card-title bcl-preserve bcl-heading"
                          >
                            <a
                              class="standalone"
                              href="/example.html"
                            >
                              Adjur Tichar
                            </a>
                          </h1>
                          <span
                            class="text-muted me-4-5"
                          >
                            Organisation
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Position
                          </span>
                        </div>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  class="col"
                >
                  <article
                    class="listing-item border-bottom border-md-0 border-0 card"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="bcl-card-start-col mb-3 mb-lg-0 bcl-size-small"
                      >
                        <img
                          alt="alt img"
                          class="card-img-top rounded-1"
                          src="https://picsum.photos/160?random=3"
                        />
                      </div>
                      <div
                        class="col-md"
                      >
                        <div
                          class="card-body p-0 pb-md-0 pb-3"
                        >
                          <h1
                            class="fs-5 card-title bcl-preserve bcl-heading"
                          >
                            <a
                              class="standalone"
                              href="/example.html"
                            >
                              Szép Mara
                            </a>
                          </h1>
                          <span
                            class="text-muted me-4-5"
                          >
                            Organisation
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Position
                          </span>
                        </div>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  class="col"
                >
                  <article
                    class="listing-item border-bottom border-md-0 border-0 card"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="bcl-card-start-col mb-3 mb-lg-0 bcl-size-small"
                      >
                        <img
                          alt="alt img"
                          class="card-img-top rounded-1"
                          src="https://picsum.photos/160?random=4"
                        />
                      </div>
                      <div
                        class="col-md"
                      >
                        <div
                          class="card-body p-0 pb-md-0 pb-3"
                        >
                          <h1
                            class="fs-5 card-title bcl-preserve bcl-heading"
                          >
                            <a
                              class="standalone"
                              href="/example.html"
                            >
                              Daniel Cardoso Rocha
                            </a>
                          </h1>
                          <span
                            class="text-muted me-4-5"
                          >
                            Organisation
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Position
                          </span>
                        </div>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  class="col"
                >
                  <article
                    class="listing-item border-bottom border-md-0 border-0 card"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="bcl-card-start-col mb-3 mb-lg-0 bcl-size-small"
                      >
                        <img
                          alt="alt img"
                          class="card-img-top rounded-1"
                          src="https://picsum.photos/160?random=5"
                        />
                      </div>
                      <div
                        class="col-md"
                      >
                        <div
                          class="card-body p-0 pb-md-0 pb-3"
                        >
                          <h1
                            class="fs-5 card-title bcl-preserve bcl-heading"
                          >
                            <a
                              class="standalone"
                              href="/example.html"
                            >
                              Aurelia Panicucci
                            </a>
                          </h1>
                          <span
                            class="text-muted me-4-5"
                          >
                            Organisation
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Position
                          </span>
                        </div>
                      </div>
                    </div>
                  </article>
                </div>
                <div
                  class="col"
                >
                  <article
                    class="listing-item border-bottom border-md-0 border-0 card"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="bcl-card-start-col mb-3 mb-lg-0 bcl-size-small"
                      >
                        <img
                          alt="alt img"
                          class="card-img-top rounded-1"
                          src="https://picsum.photos/160?random=6"
                        />
                      </div>
                      <div
                        class="col-md"
                      >
                        <div
                          class="card-body p-0 pb-md-0 pb-3"
                        >
                          <h1
                            class="fs-5 card-title bcl-preserve bcl-heading"
                          >
                            <a
                              class="standalone"
                              href="/example.html"
                            >
                              Felicyta Kowalska
                            </a>
                          </h1>
                          <span
                            class="text-muted me-4-5"
                          >
                            Organisation
                          </span>
                          <span
                            class="text-muted me-2"
                          >
                            Position
                          </span>
                        </div>
                      </div>
                    </div>
                  </article>
                </div>
              </div>
            </div>
          </section>
          <section
            class="bcl-section"
          >
            <hr
              class="d-none d-md-block mt-4-5"
            />
            <nav
              aria-label="Pagination aria label"
              class="mt-4-5"
              role="navigation"
            >
              <ul
                class="bcl-pagination pagination justify-content-center"
              >
                <li
                  class="page-item"
                >
                  <a
                    aria-label="First page"
                    class="page-link"
                    href="/example.html"
                  >
                    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  


                    <svg
                      class="bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#chevron-double-left"
                      />
                    </svg>
                  </a>
                </li>
                <li
                  class="page-item"
                >
                  <a
                    aria-label="Previous page"
                    class="page-link"
                    href="/example.html"
                  >
                    Previous
                  </a>
                </li>
                <li
                  class="page-item active"
                >
                  <a
                    aria-current="page"
                    class="page-link"
                    href="/example.html"
                  >
                    1
                  </a>
                </li>
                <li
                  class="page-item"
                >
                  <a
                    class="page-link"
                    href="/example.html"
                  >
                    2
                  </a>
                </li>
                <li
                  class="page-item"
                >
                  <a
                    class="page-link"
                    href="/example.html"
                  >
                    3
                  </a>
                </li>
                <li
                  class="page-item"
                >
                  <a
                    class="page-link"
                    href="/example.html"
                  >
                    4
                  </a>
                </li>
                <li
                  class="page-item"
                >
                  <a
                    class="page-link"
                    href="/example.html"
                  >
                    5
                  </a>
                </li>
                <li
                  class="page-item"
                >
                  <a
                    aria-label="Next page"
                    class="page-link"
                    href="/example.html"
                  >
                    Next
                  </a>
                </li>
                <li
                  class="page-item"
                >
                  <a
                    aria-label="Last page"
                    class="page-link"
                    href="/example.html"
                  >
                    &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  


                    <svg
                      class="bi icon--fluid"
                    >
                      <use
                        xlink:href="/icons.svg#chevron-double-right"
                      />
                    </svg>
                  </a>
                </li>
              </ul>
            </nav>
          </section>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="mt-md-4-75 mt-4 bcl-footer bcl-footer--neutral"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
            <br />
              Duis fermentum facilisis ex, ac porta massa.
          </p>
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <p>
            Contact information of the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#facebook"
                />
              </svg>
              Facebook
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#twitter"
                />
              </svg>
              Twitter
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760





              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#linkedin"
                />
              </svg>
              Linkedin
            </a>
          </div>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            About us
          </p>
          <p>
            Information about the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold pb-2 mb-2"
          >
            More information on:
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone bcl-link"
              href="/example.html"
            >
              Link
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;
